<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/create_card"
                android:textColor="@color/colorWhite" />

        </LinearLayout>


        <EditText
            android:id="@+id/title"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_border"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/title"
            android:paddingLeft="10dp"
            android:hint="@string/title"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btn_close"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/save"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/tbn_save"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorWhite" />


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>